general meta tags added to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BizMate - поиск партнеров для бизнесу</title>
+  <title>BizMate - поиск партнеров и инвестиций для бизнеса</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
@@ -10,7 +10,20 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
   <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#5bbad5">
+
+  <!-- TODO:// Remove meta-tags after ssr implementation -->
   <meta name="theme-color" content="#ffffff">
+  <meta name="og:title" content="BizMate - поиск партнеров и инвестиций для бизнеса">
+  <meta name="twitter:title" content="BizMate - поиск партнеров и инвестиций для бизнеса">
+  <meta name="keywords" content="бизнес инвестор, партнер по бизнесу, инвестор искать, куда вклыдвать деньги, вложить в бизнес, купить бизнес, купить готовый бизнес, начинающий бизнес, бизнес партнер, частный инвестор">
+  <meta name="description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
+  <meta name="og:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
+  <meta name="twitter:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="https://biz-mate.ru/">
+  <meta name="og:site_name" content="BizMate">
+  <meta name="og:type" content="website">
+
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
