close button removed from note bar & some minor fixes

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>BizMate - поиск партнеров и инвестиций для бизнеса</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="yandex-verification" content="3f8cbccfee139cb3" />
   <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
