--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,10 @@
   <meta name="twitter:site" content="https://biz-mate.ru/">
   <meta name="og:site_name" content="BizMate">
   <meta name="og:type" content="website">
-
-  <!-- Yandex.Metrika counter -->
-  <script type="text/javascript" >
+</head>
+<body>
+  <app-root></app-root>
+  <script defer type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -39,9 +40,5 @@
     });
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/65053642" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!-- /Yandex.Metrika counter -->
-</head>
-<body>
-  <app-root></app-root>
 </body>
 </html>
