--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>BizMate - поиск партнеров и инвестиций для бизнеса</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="yandex-verification" content="3f8cbccfee139cb3" />
+  <meta name="yandex-verification" content="3f8cbccfee139cb3"/>
   <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
@@ -27,18 +27,31 @@
 </head>
 <body>
   <app-root></app-root>
-  <script defer type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  <script defer type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l = 1 * new Date();
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(65053642, "init", {
-      clickmap:true,
-      trackLinks:true,
-      accurateTrackBounce:true,
-      webvisor:true
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
     });
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/65053642" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <noscript><div><img src="https://mc.yandex.ru/watch/65053642" style="position:absolute; left:-9999px;" alt=""/></div></noscript>
+
+  <script defer type="text/javascript">!function () {
+    var t = document.createElement("script");
+    t.type = "text/javascript", t.async = !0, t.src = "https://vk.com/js/api/openapi.js?168", t.onload = function () {
+      VK.Retargeting.Init("VK-RTRG-546343-fD9UU"), VK.Retargeting.Hit()
+    }, document.head.appendChild(t)
+  }();</script>
+  <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-546343-fD9UU" style="position:fixed; left:-999px;" alt=""/></noscript>
 </body>
 </html>
