--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,19 @@
   <meta name="twitter:site" content="https://biz-mate.ru/">
   <meta name="og:site_name" content="BizMate">
   <meta name="og:type" content="website">
+  <style>
+    #initial_spinner{position: fixed;top: 0;left: 0;right: 0;bottom: 0;background-color: #ffffff;display: flex;justify-content: center;align-items: center;z-index: 2147483647;}
+    #initial_spinner>div{display: inline-block;position: relative;width: 80px;height: 80px;}
+    #initial_spinner>div:after{content: " ";display: block;border-radius: 50%;width: 0;height: 0;margin: 8px;box-sizing: border-box;border: 32px solid #fff;border-color: #2E7990 transparent #2E7990 transparent;animation: initial_spinner 1.2s infinite;}
+    @keyframes initial_spinner{
+      0%{transform: rotate(0);animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);}
+      50% {transform: rotate(900deg);animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);}
+      100% {transform: rotate(1800deg);}
+    }
+  </style>
 </head>
 <body>
+  <div id="initial_spinner"><div></div></div>
   <app-root></app-root>
   <script defer type="text/javascript">
     (function (m, e, t, r, i, k, a) {
