--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 <body>
   <div id="initial_spinner"><div></div></div>
   <app-root></app-root>
-  <script defer type="text/javascript">
+  <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
       m[i] = m[i] || function () {
         (m[i].a = m[i].a || []).push(arguments)
@@ -57,7 +57,7 @@
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/65053642" style="position:absolute; left:-9999px;" alt=""/></div></noscript>
 
-  <script defer type="text/javascript">!function () {
+  <script type="text/javascript">!function () {
     var t = document.createElement("script");
     t.type = "text/javascript", t.async = !0, t.src = "https://vk.com/js/api/openapi.js?168", t.onload = function () {
       VK.Retargeting.Init("VK-RTRG-546343-fD9UU"), VK.Retargeting.Hit()
