--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="yandex-verification" content="3f8cbccfee139cb3"/>
-  <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#5bbad5">
-
+  <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <!-- TODO:// Remove meta-tags after ssr implementation -->
   <meta name="theme-color" content="#ffffff">
   <meta name="og:title" content="BizMate - поиск партнеров и инвестиций для бизнеса">
@@ -19,9 +18,11 @@
   <meta name="keywords" content="бизнес инвестор, партнер по бизнесу, инвестор искать, куда вклыдвать деньги, вложить в бизнес, купить бизнес, купить готовый бизнес, начинающий бизнес, бизнес партнер, частный инвестор">
   <meta name="description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
   <meta name="og:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
+  <meta name="og:image" content="https://firebasestorage.googleapis.com/v0/b/bizmate-5f9a4.appspot.com/o/partnership.png?alt=media&token=4569cac9-f58c-437e-85cb-efdeb970bf02"/>
   <meta name="twitter:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="https://biz-mate.ru/">
+  <meta name="twitter:name" content="https://firebasestorage.googleapis.com/v0/b/bizmate-5f9a4.appspot.com/o/partnership.png?alt=media&token=4569cac9-f58c-437e-85cb-efdeb970bf02"/>
   <meta name="og:site_name" content="BizMate">
   <meta name="og:type" content="website">
   <style>
