--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <span>Идёт загрузка...</span>
   </div>
   <div id="init_error_message" style="display: none">
-    <p>Произошла ошибка при инициализации или сервис не поддерживается данным браузером. Попробуйте перезагрузить страницу.</p>
+    <p>Произошла ошибка при инициализации сервиса. Попробуйте перезагрузить страницу.</p>
   </div>
   <app-root></app-root>
   <!-- Yandex.Metrika counter -->
