--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,36 @@
 <!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>BizMate - поиск партнеров и инвестиций для бизнеса</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="yandex-verification" content="3f8cbccfee139cb3"/>
   <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png"/>
   <link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="prefetch" as="image" href="/assets/img/biz_mate/logo_header.svg"/>
+  <link rel="prefetch" as="image" href="/assets/img/biz_mate/home_page_img.png"/>
+  <link rel="prefetch" as="image" href="/assets/img/biz_mate/watermark.svg"/>
+  <link rel="prefetch" as="font" href="/assets/fonts/Raleway-Regular.ttf"/>
+  <link rel="prefetch" as="font" href="/assets/fonts/Raleway-SemiBold.ttf"/>
+  <link rel="prefetch" as="font" href="/assets/fonts/Raleway-Light.ttf"/>
   <!-- TODO:// Remove meta-tags after ssr implementation -->
-  <meta name="theme-color" content="#ffffff">
-  <meta name="og:title" content="BizMate - поиск партнеров и инвестиций для бизнеса">
-  <meta name="twitter:title" content="BizMate - поиск партнеров и инвестиций для бизнеса">
-  <meta name="keywords" content="бизнес инвестор, партнер по бизнесу, инвестор искать, куда вклыдвать деньги, вложить в бизнес, купить бизнес, купить готовый бизнес, начинающий бизнес, бизнес партнер, частный инвестор">
-  <meta name="description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
-  <meta name="og:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
+  <meta name="theme-color" content="#ffffff"/>
+  <meta name="og:title" content="BizMate - поиск партнеров и инвестиций для бизнеса"/>
+  <meta name="twitter:title" content="BizMate - поиск партнеров и инвестиций для бизнеса"/>
+  <meta name="keywords" content="бизнес инвестор, партнер по бизнесу, инвестор искать, куда вклыдвать деньги, вложить в бизнес, купить бизнес, купить готовый бизнес, начинающий бизнес, бизнес партнер, частный инвестор"/>
+  <meta name="description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!"/>
+  <meta name="og:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!"/>
   <meta name="og:image" content="https://firebasestorage.googleapis.com/v0/b/bizmate-5f9a4.appspot.com/o/partnership.png?alt=media&token=4569cac9-f58c-437e-85cb-efdeb970bf02"/>
-  <meta name="twitter:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="https://biz-mate.ru/">
+  <meta name="twitter:description" content="Сервис BizMate помогает найти партнёра по бизнесу, привлечь или предложить инвестиции, а также продать работающий бизнес. И все это абсолютно бесплатно!"/>
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="https://biz-mate.ru/"/>
   <meta name="twitter:name" content="https://firebasestorage.googleapis.com/v0/b/bizmate-5f9a4.appspot.com/o/partnership.png?alt=media&token=4569cac9-f58c-437e-85cb-efdeb970bf02"/>
-  <meta name="og:site_name" content="BizMate">
-  <meta name="og:type" content="website">
+  <meta name="og:site_name" content="BizMate"/>
+  <meta name="og:type" content="website"/>
   <style>
     #initial_spinner, #init_error_message{position: fixed;top: 0;left: 0;right: 0;bottom: 0;background-color: #ffffff;display: flex;flex-direction:column;justify-content: center;align-items: center;z-index: 2147483647;}
     #initial_spinner>div{display: inline-block;position: relative;width: 80px;height: 80px;margin-bottom:1em;}
